# cmnist-cnn

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.github/workflows/: tests.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: epoch=9.ckpt  model.pt
src/cmnist_cnn/: data.py  evaluate.py  model.py  train.py  utils.py  visualize.py
tests/: test_data.py  test_model.py
